# NN-MitralSeg

./: .gitignore  main.py  prepare_dataset.py  pyproject.toml  readme.md
configuration/: NNMF_default.ini  NNMF_echonet.ini  NNMF_high_res.ini
source/: echos.py  evaluation.py  main.py  utils.py  video_processing.py
source/segment/: nnmf_segment.py  rnmf_segment.py  segment_class.py
